@@ -342,6 +342,7 @@ my $builder = $class->new(
         'File::Inplace'                          => 0,
         'File::Path'                             => 0,
         'File::pushd'                            => 0,
+        'File::Slurp'                            => 0,
         'File::Spec'                             => 0,
         'File::Which'                            => 0,
         'Getopt::Long'                           => 0,
@@ -349,6 +350,7 @@ my $builder = $class->new(
         'HTML::FormatText::WithLinks'            => 0,
         'HTML::FormatText::WithLinks::AndTables' => 0.02,
         'HTML::TreeBuilder'                      => 0,
+        'HTML::WikiConverter::Markdown'          => 0,
         'I18N::LangTags::List'                   => 0,
         'IO::String'                             => 0,
         'List::Util'                             => 0,
@@ -394,6 +396,7 @@ my $builder = $class->new(
         'File::Inplace'                          => 0,
         'File::Path'                             => 0,
         'File::pushd'                            => 0,
+        'File::Slurp'                            => 0,
         'File::Spec'                             => 0,
         'File::Which'                            => 0,
         'Getopt::Long'                           => 0,
@@ -401,6 +404,7 @@ my $builder = $class->new(
         'HTML::FormatText::WithLinks'            => 0,
         'HTML::FormatText::WithLinks::AndTables' => 0.02,
         'HTML::TreeBuilder'                      => 0,
+        'HTML::WikiConverter::Markdown'          => 0,
         'I18N::LangTags::List'                   => 0,
         'IO::String'                             => 0,
         'List::Util'                             => 0,
