@@ -1,3 +1,5 @@
+@import url("db4.css");
+
 
 html {
     overflow-y: scroll;
@@ -272,7 +274,9 @@ body[dir="rtl"] .version_tabs .link a.active:before {
 body {
     background-color: #EEEEEE;
     border: medium none;
-    font-size: 1em;
+    color: #1a1a1a;
+    font-size: 16.8px;
+    line-height: 25.2px;
     padding-top: 32px;
 }
 body > #wrapper {
@@ -568,6 +572,7 @@ body[dir="rtl"] .side_products div.link a:after {
 }
 .jcarousel-item-horizontal {
     margin-left: 0;
+    margin-top: 0px;
 }
 .jcarousel-direction-rtl .jcarousel-item-horizontal {
     margin-right: 0;
@@ -686,17 +691,6 @@ body[dir="rtl"] .footer {
 }
 .menu_embeded #title.hidden {
     display: block;
-}
-p, div.para, div.formalpara {
-    margin-bottom: 1em;
-    margin-top: 0.3em;
-    padding-bottom: 0;
-    padding-top: 0;
-}p, div.para, div.formalpara {
-    margin-bottom: 1em;
-    margin-top: 0.3em;
-    padding-bottom: 0;
-    padding-top: 0;
 }
 
 body, html {
